// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionTemplate should match snapshot with status=authorizing 1`] = `
<div>
  <form
    class="container"
  >
    <h2
      class="heading"
    >
      Purchase Process
    </h2>
    <p
      class="txPrepared"
    >
      Transaction prepared
    </p>
    <section
      class="addressContainer"
    >
      <div
        class="pending"
      >
        <svg
          class="identicon"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <circle
            cx="32"
            cy="32"
            fill="#eee"
            r="32"
          />
          <circle
            cx="32"
            cy="8"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="20"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="14"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="20"
            fill="hsl(174, 56%, 35%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="26"
            fill="hsl(39, 56%, 35%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="32"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="44"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="38"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="50"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="56"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="32"
            cy="44"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="50"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="44"
            fill="hsl(236, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="38"
            fill="hsl(202, 56%, 75%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="32"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="20"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="26"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="14"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="32"
            fill="hsl(90, 56%, 35%)"
            r="5"
          />
        </svg>
      </div>
      <p
        class="address"
      >
        <span
          class="addressName"
        >
          For account address
        </span>
        <span
          class="addressValue"
        >
          4rjRmamwCipCeLpVGSrwtWoWCu53FXXf6S7f6DYJX6k644ML
        </span>
      </p>
    </section>
    <section
      class="incomplete"
    >
      <p
        class="instruction"
      >
        To complete your order, please first accept the
         
        <a
          class="termsLink"
          href="#"
        >
          Terms and Conditions
        </a>
      </p>
      <p
        class="termsLineEnabled"
      >
        <label
          class="termsLabel"
        >
          <input
            checked=""
            class="accept"
            type="checkbox"
          />
          <span
            class="checkbox"
          />
          <span
            class="termsLabelText"
          >
            I accept the Terms and Conditions of the Checkout Service.
          </span>
        </label>
      </p>
      <p
        class="instruction"
      >
        then continue with PayPal
      </p>
      <p
        class="cost"
      >
        <span>
          Total cost
        </span>
        <span
          class="costValue"
        >
          EUR 4.00
        </span>
      </p>
      <button>
        PayPal
      </button>
    </section>
    <dialog
      class="dialog"
      open=""
    >
      Please wait while your transaction is being processed
    </dialog>
  </form>
</div>
`;

exports[`TransactionTemplate should match snapshot with status=complete 1`] = `
<div>
  <form
    class="container"
  >
    <h2
      class="heading"
    >
      Purchase Process
    </h2>
    <p
      class="txComplete"
    >
      Order complete
    </p>
    <section
      class="addressContainer"
    >
      <div
        class="avatar"
      >
        <svg
          class="identicon"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <circle
            cx="32"
            cy="32"
            fill="#eee"
            r="32"
          />
          <circle
            cx="32"
            cy="8"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="20"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="14"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="20"
            fill="hsl(174, 56%, 35%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="26"
            fill="hsl(39, 56%, 35%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="32"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="44"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="38"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="50"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="56"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="32"
            cy="44"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="50"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="44"
            fill="hsl(236, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="38"
            fill="hsl(202, 56%, 75%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="32"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="20"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="26"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="14"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="32"
            fill="hsl(90, 56%, 35%)"
            r="5"
          />
        </svg>
      </div>
      <p
        class="address"
      >
        <span
          class="addressName"
        >
          For account address
        </span>
        <span
          class="addressValue"
        >
          4rjRmamwCipCeLpVGSrwtWoWCu53FXXf6S7f6DYJX6k644ML
        </span>
      </p>
    </section>
    <section>
      <h2
        class="purchaseHeading"
      >
        Billing information
      </h2>
      <dl
        class="purchaseDetails"
      >
        <div
          class="purchaseDetail"
        >
          <dt
            class="detailName"
          >
            Order total:
          </dt>
          <dd
            class="detailValue"
          >
            EUR 4.00
          </dd>
        </div>
        <address
          class="purchaseDetail"
        >
          <dt
            class="detailName"
          >
            Billing address:
          </dt>
          <dd
            class="detailValue"
          >
            <span>
              Timothy Tumnus
            </span>
            <span>
              1 Lamppost Lane
            </span>
            <span>
              Behind the Wardrobe
            </span>
            <span>
              123456
               
              Narnia
            </span>
            <span>
              GB
            </span>
          </dd>
        </address>
      </dl>
      <h2
        class="servicesHeading"
      >
        Congratulations! Now you can start building and using your digital identity with KILT services:
      </h2>
      <ul
        class="services"
      >
        <li>
          Give your DID a custom name using
           
          <a
            class="serviceLink"
            href="https://w3n.id/"
          >
            web3name
          </a>
        </li>
        <li>
          Add credentials to your DID such as social media accounts, GitHub and email address using
           
          <a
            class="serviceLink"
            href="https://socialkyc.io/"
          >
            SocialKYC
          </a>
        </li>
        <li>
          Sign digital files with your DID in a secure, decentralized way using
           
          <a
            class="serviceLink"
            href="https://didsign.io/"
          >
            DIDsign
          </a>
        </li>
        <li>
          Link your DID to your Polkadot ecosystem addresses (and soon, Ethereum)
        </li>
      </ul>
    </section>
    <dialog
      class="dialog"
    >
      Please wait while your transaction is being processed
    </dialog>
  </form>
</div>
`;

exports[`TransactionTemplate should match snapshot with status=prepared 1`] = `
<div>
  <form
    class="container"
  >
    <h2
      class="heading"
    >
      Purchase Process
    </h2>
    <p
      class="txPrepared"
    >
      Transaction prepared
    </p>
    <section
      class="addressContainer"
    >
      <div
        class="pending"
      >
        <svg
          class="identicon"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <circle
            cx="32"
            cy="32"
            fill="#eee"
            r="32"
          />
          <circle
            cx="32"
            cy="8"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="20"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="14"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="20"
            fill="hsl(174, 56%, 35%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="26"
            fill="hsl(39, 56%, 35%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="32"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="44"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="38"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="50"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="56"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="32"
            cy="44"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="50"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="44"
            fill="hsl(236, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="38"
            fill="hsl(202, 56%, 75%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="32"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="20"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="26"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="14"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="32"
            fill="hsl(90, 56%, 35%)"
            r="5"
          />
        </svg>
      </div>
      <p
        class="address"
      >
        <span
          class="addressName"
        >
          For account address
        </span>
        <span
          class="addressValue"
        >
          4rjRmamwCipCeLpVGSrwtWoWCu53FXXf6S7f6DYJX6k644ML
        </span>
      </p>
    </section>
    <section
      class="incomplete"
    >
      <p
        class="instruction"
      >
        To complete your order, please first accept the
         
        <a
          class="termsLink"
          href="#"
        >
          Terms and Conditions
        </a>
      </p>
      <p
        class="termsLine"
      >
        <label
          class="termsLabel"
        >
          <input
            class="accept"
            type="checkbox"
          />
          <span
            class="checkbox"
          />
          <span
            class="termsLabelText"
          >
            I accept the Terms and Conditions of the Checkout Service.
          </span>
        </label>
      </p>
      <p
        class="instruction"
      >
        then continue with PayPal
      </p>
      <p
        class="cost"
      >
        <span>
          Total cost
        </span>
        <span
          class="costValue"
        >
          EUR 4.00
        </span>
      </p>
      <button>
        PayPal
      </button>
    </section>
    <dialog
      class="dialog"
    >
      Please wait while your transaction is being processed
    </dialog>
  </form>
</div>
`;

exports[`TransactionTemplate should match snapshot with status=submitting 1`] = `
<div>
  <form
    class="container"
  >
    <h2
      class="heading"
    >
      Purchase Process
    </h2>
    <p
      class="txPrepared"
    >
      Transaction prepared
    </p>
    <section
      class="addressContainer"
    >
      <div
        class="pending"
      >
        <svg
          class="identicon"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <circle
            cx="32"
            cy="32"
            fill="#eee"
            r="32"
          />
          <circle
            cx="32"
            cy="8"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="20"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="14"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="20"
            fill="hsl(174, 56%, 35%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="26"
            fill="hsl(39, 56%, 35%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="32"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="44"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="38"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="50"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="56"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="32"
            cy="44"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="50"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="44"
            fill="hsl(236, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="38"
            fill="hsl(202, 56%, 75%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="32"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="20"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="26"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="14"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="32"
            fill="hsl(90, 56%, 35%)"
            r="5"
          />
        </svg>
      </div>
      <p
        class="address"
      >
        <span
          class="addressName"
        >
          For account address
        </span>
        <span
          class="addressValue"
        >
          4rjRmamwCipCeLpVGSrwtWoWCu53FXXf6S7f6DYJX6k644ML
        </span>
      </p>
    </section>
    <section
      class="incomplete"
    >
      <p
        class="instruction"
      >
        To complete your order, please first accept the
         
        <a
          class="termsLink"
          href="#"
        >
          Terms and Conditions
        </a>
      </p>
      <p
        class="termsLineEnabled"
      >
        <label
          class="termsLabel"
        >
          <input
            checked=""
            class="accept"
            type="checkbox"
          />
          <span
            class="checkbox"
          />
          <span
            class="termsLabelText"
          >
            I accept the Terms and Conditions of the Checkout Service.
          </span>
        </label>
      </p>
      <p
        class="instruction"
      >
        then continue with PayPal
      </p>
      <p
        class="cost"
      >
        <span>
          Total cost
        </span>
        <span
          class="costValue"
        >
          EUR 4.00
        </span>
      </p>
      <button>
        PayPal
      </button>
    </section>
    <dialog
      class="dialog"
      open=""
    >
      Please wait while your transaction is being processed
    </dialog>
  </form>
</div>
`;

exports[`TransactionTemplate should match snapshot with terms accepted 1`] = `
<div>
  <form
    class="container"
  >
    <h2
      class="heading"
    >
      Purchase Process
    </h2>
    <p
      class="txPrepared"
    >
      Transaction prepared
    </p>
    <section
      class="addressContainer"
    >
      <div
        class="pending"
      >
        <svg
          class="identicon"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <circle
            cx="32"
            cy="32"
            fill="#eee"
            r="32"
          />
          <circle
            cx="32"
            cy="8"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="20"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="14"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="20"
            fill="hsl(174, 56%, 35%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="26"
            fill="hsl(39, 56%, 35%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="32"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="44"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="38"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="50"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="56"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="32"
            cy="44"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="50"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="44"
            fill="hsl(236, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="38"
            fill="hsl(202, 56%, 75%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="32"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="20"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="26"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="14"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="32"
            fill="hsl(90, 56%, 35%)"
            r="5"
          />
        </svg>
      </div>
      <p
        class="address"
      >
        <span
          class="addressName"
        >
          For account address
        </span>
        <span
          class="addressValue"
        >
          4rjRmamwCipCeLpVGSrwtWoWCu53FXXf6S7f6DYJX6k644ML
        </span>
      </p>
    </section>
    <section
      class="incomplete"
    >
      <p
        class="instruction"
      >
        To complete your order, please first accept the
         
        <a
          class="termsLink"
          href="#"
        >
          Terms and Conditions
        </a>
      </p>
      <p
        class="termsLineEnabled"
      >
        <label
          class="termsLabel"
        >
          <input
            checked=""
            class="accept"
            type="checkbox"
          />
          <span
            class="checkbox"
          />
          <span
            class="termsLabelText"
          >
            I accept the Terms and Conditions of the Checkout Service.
          </span>
        </label>
      </p>
      <p
        class="instruction"
      >
        then continue with PayPal
      </p>
      <p
        class="cost"
      >
        <span>
          Total cost
        </span>
        <span
          class="costValue"
        >
          EUR 4.00
        </span>
      </p>
      <button>
        PayPal
      </button>
    </section>
    <dialog
      class="dialog"
    >
      Please wait while your transaction is being processed
    </dialog>
  </form>
</div>
`;
